@@ -4,7 +4,7 @@ use lib '/usr/local/lib/systemimager/perl','/usr/lib/systemimager/perl';
 # The global version is stored here so that it can be used by 
 # the man page string in rewriting POD2MAN_EXE
 
-my $version = "2.3.7";
+my $version = "2.3.8";
 my $release = "1";
 my $releasex = "1";
 
