@@ -7,7 +7,7 @@ Upstream Authors:
 
     Copyright (c) 2001-2002, International Business Machines
     Copyright (c) 2003, Hewlett-Packard Development Company
-    Copyright (c) 2003-2006, Erich Focht <efocht@hpce.nec.com>
+    Copyright (c) 2003-2008, Erich Focht <efocht@hpce.nec.com>
     Copyright (c) 2004, Revolution Linux Inc., Benoit des Ligneris
     Copyright (c) 2006-2007, Geoffroy Vallee <valleegr@ornl.gov>
 
